--- a/p-androidapp-reminder/res/layout/activity_main.xml
+++ b/p-androidapp-reminder/res/layout/activity_main.xml
@@ -1,3 +1,4 @@
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
@@ -21,8 +22,8 @@
         android:layout_alignLeft="@+id/textView1"
         android:layout_alignRight="@+id/plainButton"
         android:layout_below="@+id/textView1"
-        android:layout_marginTop="20dp"
-        android:text="Hello IIE" />
+        android:layout_marginTop="20dp"    
+        android:text="@string/helo_world"   />
 
     <Button
         android:id="@+id/plainButton"
@@ -31,7 +32,7 @@
         android:layout_alignLeft="@+id/textView1"
         android:layout_below="@+id/textView2"
         android:layout_marginTop="60dp"
-        android:text="明文发送" />
+        android:text="@string/sendbyplaintext" />
 
     <EditText
         android:id="@+id/content"
@@ -40,7 +41,8 @@
         android:layout_alignRight="@+id/cipherButton"
         android:layout_below="@+id/plainButton"
         android:ems="10"
-        android:text="no=13381203165,sms=whoknows" />
+        android:hint="@null"
+        android:text="@string/sms" />
 
     <EditText
         android:id="@+id/address"
@@ -50,7 +52,8 @@
         android:layout_below="@+id/content"
         android:layout_marginTop="19dp"
         android:ems="10"
-        android:text="192.168.1.2" />
+        android:hint="@null"
+        android:text="@string/ip" />
 
     <Button
         android:id="@+id/takepictures"
@@ -59,7 +62,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/address"
         android:layout_marginTop="13dp"
-        android:text="拍照" />
+        android:text="@string/takepicture" />
 
     <Button
         android:id="@+id/cipherButton"
@@ -68,6 +71,6 @@
         android:layout_alignParentRight="true"
         android:layout_alignTop="@+id/plainButton"
         android:layout_marginTop="11dp"
-        android:text="加密发送" />
+        android:text="@string/sendbycipher" />
 
 </RelativeLayout>
